немецкая локаль ивента

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-24 20:08+0300\n"
-"PO-Revision-Date: 2022-10-23 23:47+0300\n"
+"PO-Revision-Date: 2022-10-24 21:48+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -105,12 +105,9 @@ msgstr "Vorwahlen_in_der_Partei"
 
 #: player/templates/player/redesign/game_event/halloween.html:128
 #: player/views/game_event/halloween.py:37
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "Хэллоуинский ивент"
 msgctxt "game_event"
 msgid "Хэллоуинский ивент!"
-msgstr "Halloween-Ereignis"
+msgstr "Happy Halloween!"
 
 #: player/templates/player/redesign/game_event/halloween.html:142
 #: player/templates/player/redesign/game_event/halloween.html:151
@@ -121,7 +118,7 @@ msgstr "Halloween-Ereignis"
 #: player/templates/player/redesign/game_event/halloween.html:196
 msgctxt "game_event"
 msgid "очков"
-msgstr ""
+msgstr "Punkte"
 
 #: player/templates/player/redesign/game_event/halloween.html:143
 #: player/templates/player/redesign/game_event/halloween.html:152
@@ -130,52 +127,46 @@ msgstr ""
 #: player/templates/player/redesign/game_event/halloween.html:179
 #: player/templates/player/redesign/game_event/halloween.html:188
 #: player/templates/player/redesign/game_event/halloween.html:197
-#, fuzzy
-#| msgctxt "profile"
-#| msgid "премиум-аккаунт"
 msgctxt "game_event"
 msgid "премиум день"
-msgstr "Premium Status"
+msgstr "Tag der Belohnung"
 
 #: player/templates/player/redesign/game_event/halloween.html:211
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "Хэллоуинский ивент"
 msgctxt "game_event"
 msgid "Хэллоуинский ивент в WP:"
-msgstr "Halloween-Ereignis"
+msgstr "Halloween-Event in WP:"
 
 #: player/templates/player/redesign/game_event/halloween.html:212
 msgctxt "game_event"
 msgid "играй как обычно - и получай награды!"
-msgstr ""
+msgstr "wie gewohnt spielen - und Belohnungen erhalten!"
 
 #: player/templates/player/redesign/game_event/halloween.html:213
 msgctxt "game_event"
 msgid "- с 25.10 по 1.11 заполняй прогрессию события, расходуя энергию"
 msgstr ""
+"- vom 25.10 bis zum 01.11 hast du Zeit das Event abzuschließen, indem du "
+"Energie verbrauchst"
 
 #: player/templates/player/redesign/game_event/halloween.html:214
 msgctxt "game_event"
 msgid "- каждые 2 000 потраченной энергии открывают новые награды"
-msgstr ""
+msgstr "Verbrauche 2.000 Energie um eine neue Belohnung freizuschalten"
 
 #: player/templates/player/redesign/game_event/halloween.html:215
 msgctxt "game_event"
 msgid "Награды события:"
-msgstr ""
+msgstr "Belohnungen:"
 
 #: player/templates/player/redesign/game_event/halloween.html:216
-#, fuzzy
-#| msgid "У вас нет активного премиум-аккаунта"
 msgctxt "game_event"
 msgid "- до семи дней премиум аккаунта"
-msgstr "Du hast kein Premium aktiviert"
+msgstr "- bis zu sieben Tage Premiun"
 
 #: player/templates/player/redesign/game_event/halloween.html:217
 msgctxt "game_event"
 msgid "- первая прогрессионная рамка для аватара в игре"
-msgstr ""
+msgstr "- der erste Profilrahmen im Spiel"
 
 #: player/templates/player/redesign/menu.html:7
 msgctxt "menu"
@@ -279,7 +270,7 @@ msgstr "es gibt aktuell keine Kriege"
 #: player/templates/player/redesign/overview.html:267
 msgctxt "overview"
 msgid "Хэллоуинский ивент"
-msgstr "Halloween-Ereignis"
+msgstr "Halloween-Event"
 
 #: player/templates/player/redesign/overview.html:283
 msgctxt "overview"
@@ -397,12 +388,12 @@ msgstr "Fertigkeitsbaum"
 #: player/templates/player/redesign/overview_skills.html:175
 msgctxt "skill_cancel"
 msgid "Отмена изучения навыка"
-msgstr "Du kannst das Erlernen von Fähigkeiten abbrechen"
+msgstr "Du kannst die Fähigkeit abbrechen"
 
 #: player/templates/player/redesign/overview_skills.html:176
 msgctxt "skill_cancel"
 msgid "Изучение навыка будет отменено. Продолжить?"
-msgstr "Das Erlernen der Fähigkeit wird abgebrochen. Soll ich fortfahren?"
+msgstr "Die Fähigkeit wird abgebrochen. Fortfahren?"
 
 #: player/templates/player/redesign/overview_skills.html:177
 msgid "Продолжить"
@@ -416,14 +407,12 @@ msgstr "Erhalte Gold für einen Repost"
 #: player/templates/player/redesign/player_repost.html:5
 msgctxt "repost"
 msgid "поддержи проект репостом и получай золото!"
-msgstr ""
-"Unterstütze WP durch eine Wiederveröffentlichung eines Beitrags und erhalte "
-"Gold!"
+msgstr "Unterstütze WP durch einen Repost und erhalte Gold!"
 
 #: player/templates/player/redesign/player_repost.html:9
 msgctxt "repost"
 msgid "запись для репоста"
-msgstr "Beitrag zum werben"
+msgstr "Beitrag zum reposten"
 
 #: player/templates/player/redesign/player_repost.html:11
 msgctxt "repost"
@@ -508,7 +497,7 @@ msgstr "Ablaufdatum"
 #: player/templates/player/redesign/profile.html:173
 msgctxt "profile"
 msgid "не активен"
-msgstr "Du hast kein Premium aktiviert"
+msgstr "kein Premmium"
 
 #: player/templates/player/redesign/profile.html:178
 #: player/templates/player/redesign/view_profile.html:67
@@ -598,7 +587,7 @@ msgstr "Fehlerhafter Wert"
 
 #: player/views/change_back_allow.py:42 player/views/change_back_allow.py:58
 msgid "Настройка партийного фона"
-msgstr "Lege den Parteihintergrund der Partei fest."
+msgstr "Lege ein Partei Hintergrund fest."
 
 #: player/views/change_back_allow.py:43 player/views/change_back_allow.py:59
 #: player/views/expense_energy.py:30 player/views/expense_energy.py:54
@@ -615,11 +604,11 @@ msgstr "Schließen"
 #: player/views/change_back_allow.py:57 player/views/set_language.py:54
 #: player/views/set_timezone.py:43
 msgid "Ошибка метода"
-msgstr "Es ist ein Fehler beim Abbrechen der Fertigkeit aufgetreten"
+msgstr "Es ist ein Fehler beim Abbrechen der Fähigkeit aufgetreten"
 
 #: player/views/expense_energy.py:28
 msgid "Десять минут ещё не прошло"
-msgstr "Es sind noch keine zehn Minuten vergangen"
+msgstr "Es sind noch keine 10 Minuten vergangen"
 
 #: player/views/expense_energy.py:29 player/views/expense_energy.py:53
 #: player/views/expense_energy.py:62 player/views/expense_energy.py:73
@@ -628,12 +617,11 @@ msgstr "Auffüllen der Energie"
 
 #: player/views/expense_energy.py:52
 msgid "Пополнение энергии не требуется"
-msgstr "Kein Nachfüllen von Energie erforderlich"
+msgstr "Energie muss noch nicht nachgefüllt werden."
 
 #: player/views/expense_energy.py:61
 msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
-msgstr ""
-"Es sind nicht genügend Energisers verfügbar. Erstellen Sie sie im Lagerhaus"
+msgstr "Du hast nicht genug Energie. Im Lagerhaus kannst du sie herstellen."
 
 #: player/views/expense_energy.py:72
 msgid "Ошибка типа запроса"
