--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-24 20:08+0300\n"
-"PO-Revision-Date: 2022-10-24 21:48+0300\n"
+"PO-Revision-Date: 2022-10-24 22:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -129,7 +129,7 @@ msgstr "Punkte"
 #: player/templates/player/redesign/game_event/halloween.html:197
 msgctxt "game_event"
 msgid "премиум день"
-msgstr "Tag der Belohnung"
+msgstr "tag Premium"
 
 #: player/templates/player/redesign/game_event/halloween.html:211
 msgctxt "game_event"
