--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-31 18:14+0300\n"
-"PO-Revision-Date: 2022-10-24 22:25+0300\n"
+"PO-Revision-Date: 2022-10-31 19:15+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -507,12 +507,9 @@ msgstr "Rangliste"
 
 #: player/templates/player/redesign/profile.html:186
 #: player/templates/player/redesign/view_profile.html:75
-#, fuzzy
-#| msgctxt "profile"
-#| msgid "место в рейтинге"
 msgctxt "profile"
 msgid "(к рейтингу)"
-msgstr "Rangliste"
+msgstr "(zur Top-reiche)"
 
 #: player/templates/player/redesign/profile.html:192
 #: player/templates/player/redesign/view_profile.html:81
@@ -638,13 +635,11 @@ msgstr "Fehler im Anfragetyp"
 
 #: player/views/lists/cash_top.py:83
 msgid "Топ богатейших"
-msgstr ""
+msgstr "Top Reiche"
 
 #: player/views/lists/region_citizens.py:63
-#, fuzzy
-#| msgid "Население региона"
 msgid "Граждане региона"
-msgstr "Einwohner in der Region"
+msgstr "Bewohner"
 
 #: player/views/lists/region_players.py:33
 msgid "Население региона"
@@ -691,10 +686,8 @@ msgid "Навыки"
 msgstr "Fahigkeiten"
 
 #: region/templates/region/buildings/defences.html:5
-#, fuzzy
-#| msgid "Мировое население"
 msgid "Уровень Укреплений"
-msgstr "Gesamtbevölkerung"
+msgstr "Wehranlage"
 
 #: region/templates/region/buildings/hospital.html:5
 msgid "Уровень Госпиталя"
@@ -706,7 +699,7 @@ msgstr "Krankenhausrang"
 
 #: region/templates/region/buildings/power_plant.html:5
 msgid "Уровень ТЭЦ"
-msgstr "Krankenhaus"
+msgstr "Heizkraftwerk"
 
 #: region/templates/region/region_info.html:39
 msgid "Вы летите в"
