--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-31 18:14+0300\n"
-"PO-Revision-Date: 2022-10-24 20:14+0300\n"
+"PO-Revision-Date: 2022-10-31 18:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: be\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
 "X-Generator: Poedit 3.1.1\n"
 
 #: bill/models/change_taxes.py:21 party/templates/party/party_view.html:69
@@ -506,12 +506,9 @@ msgstr "мейсца ў рэйтынгу"
 
 #: player/templates/player/redesign/profile.html:186
 #: player/templates/player/redesign/view_profile.html:75
-#, fuzzy
-#| msgctxt "profile"
-#| msgid "место в рейтинге"
 msgctxt "profile"
 msgid "(к рейтингу)"
-msgstr "мейсца ў рэйтынгу"
+msgstr "(да рэйтынгу)"
 
 #: player/templates/player/redesign/profile.html:192
 #: player/templates/player/redesign/view_profile.html:81
@@ -637,13 +634,11 @@ msgstr "Памылка тыпу запросу"
 
 #: player/views/lists/cash_top.py:83
 msgid "Топ богатейших"
-msgstr ""
+msgstr "Рэйтынг найбагацейшых"
 
 #: player/views/lists/region_citizens.py:63
-#, fuzzy
-#| msgid "Население региона"
 msgid "Граждане региона"
-msgstr "Насельніцтва рэгіёну"
+msgstr "Грамадзяне рэгіёна"
 
 #: player/views/lists/region_players.py:33
 msgid "Население региона"
