--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-14 20:58+0300\n"
+"POT-Creation-Date: 2022-11-19 19:28+0300\n"
 "PO-Revision-Date: 2022-10-31 19:15+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -31,7 +31,7 @@ msgid "Финансирование"
 msgstr "Verkauf"
 
 #: bill/models/change_taxes.py:39 bill/models/explore_resources.py:25
-#: region/templates/region/region_info.html:82 storage/models/storage.py:31
+#: region/templates/region/region_info.html:82
 msgid "Нефть"
 msgstr "Öl"
 
@@ -836,8 +836,8 @@ msgid "storage_cash"
 msgstr "lager_geld"
 
 #: state/models/treasury.py:42 storage/models/destroy.py:18
-#: storage/models/factory/production_log.py:22 storage/models/storage.py:43
-#: storage/models/storage.py:105 storage/models/transport.py:88
+#: storage/models/factory/production_log.py:22 storage/models/storage.py:105
+#: storage/models/transport.py:88
 msgid "Уголь"
 msgstr "Kohle"
 
@@ -893,15 +893,14 @@ msgid "alumunuim"
 msgstr "Aluminium"
 
 #: state/models/treasury.py:78 storage/models/destroy.py:52
-#: storage/models/factory/production_log.py:56 storage/models/storage.py:71
-#: storage/models/storage.py:161 storage/models/transport.py:144
+#: storage/models/factory/production_log.py:56 storage/models/storage.py:161
+#: storage/models/transport.py:144
 msgid "Койки"
 msgstr "Barracken"
 
 #: state/models/treasury.py:82 storage/models/destroy.py:56
-#: storage/models/storage.py:75 storage/models/storage.py:167
-#: storage/models/transport.py:150 war/models/squads/infantry.py:32
-#: war/models/wars/war_side.py:30
+#: storage/models/storage.py:167 storage/models/transport.py:150
+#: war/models/squads/infantry.py:32 war/models/wars/war_side.py:30
 msgid "Автоматы"
 msgstr "Automaten"
 
@@ -965,13 +964,11 @@ msgstr "Drohnen"
 msgid "rifle"
 msgstr "Waffe"
 
-#: storage/models/factory/project.py:16 storage/models/storage.py:59
-#: storage/models/transport.py:120
+#: storage/models/factory/project.py:16 storage/models/transport.py:120
 msgid "Бензин"
 msgstr "Kraftstoff"
 
-#: storage/models/factory/project.py:39 storage/models/storage.py:63
-#: storage/models/transport.py:130
+#: storage/models/factory/project.py:39 storage/models/transport.py:130
 msgid "Пластик"
 msgstr "Plastik"
 
@@ -987,91 +984,197 @@ msgstr "Aluminium"
 msgid "medical"
 msgstr "Medizin"
 
-#: storage/models/factory/project.py:211 storage/models/storage.py:84
-#: storage/models/storage.py:197 storage/models/transport.py:180
-#: war/models/squads/light_vehicle.py:47 war/models/wars/war_side.py:32
+#: storage/models/factory/project.py:211 storage/models/storage.py:197
+#: storage/models/transport.py:180 war/models/squads/light_vehicle.py:47
+#: war/models/wars/war_side.py:32
 msgid "БМП"
 msgstr "BMP"
 
-#: storage/models/factory/project.py:227 storage/models/storage.py:86
-#: war/models/squads/recon.py:32
+#: storage/models/factory/project.py:227 war/models/squads/recon.py:32
 msgid "БПЛА"
 msgstr "UAV"
 
 #: storage/models/storage.py:30
+#, fuzzy
+#| msgid "Минералы"
+msgctxt "goods"
 msgid "Минералы"
 msgstr "Mineralien"
 
+#: storage/models/storage.py:31
+#, fuzzy
+#| msgid "Нефть"
+msgctxt "goods"
+msgid "Нефть"
+msgstr "Öl"
+
 #: storage/models/storage.py:32
+#, fuzzy
+#| msgid "Материалы"
+msgctxt "goods"
 msgid "Материалы"
 msgstr "Materialien"
 
 #: storage/models/storage.py:33
+#, fuzzy
+#| msgid "Оборудование"
+msgctxt "goods"
 msgid "Оборудование"
 msgstr "Ausrüstung"
 
 #: storage/models/storage.py:34
+#, fuzzy
+#| msgid "Оружие"
+msgctxt "goods"
 msgid "Оружие"
 msgstr "Waffen"
 
 #: storage/models/storage.py:38
-#: storage/templates/storage/storage_lines/cash_transfer.html:9
+#, fuzzy
+#| msgid "Наличные"
+msgctxt "goods"
 msgid "Наличные"
 msgstr "Geld"
 
-#: storage/models/storage.py:45 storage/models/transport.py:93
+#: storage/models/storage.py:43
+#, fuzzy
+#| msgid "Уголь"
+msgctxt "goods"
+msgid "Уголь"
+msgstr "Kohle"
+
+#: storage/models/storage.py:45
+#, fuzzy
+#| msgid "Железо"
+msgctxt "goods"
 msgid "Железо"
 msgstr "Eisen"
 
-#: storage/models/storage.py:47 storage/models/transport.py:98
+#: storage/models/storage.py:47
+#, fuzzy
+#| msgid "Бокситы"
+msgctxt "goods"
 msgid "Бокситы"
 msgstr "Bauxit"
 
-#: storage/models/storage.py:51 storage/models/transport.py:104
+#: storage/models/storage.py:51
+#, fuzzy
+#| msgid "Нефть WTI"
+msgctxt "goods"
 msgid "Нефть WTI"
 msgstr "WTI-Öl"
 
-#: storage/models/storage.py:53 storage/models/transport.py:109
+#: storage/models/storage.py:53
+#, fuzzy
+#| msgid "Нефть Brent"
+msgctxt "goods"
 msgid "Нефть Brent"
 msgstr "Brent-Öl"
 
-#: storage/models/storage.py:55 storage/models/transport.py:114
+#: storage/models/storage.py:55
+#, fuzzy
+#| msgid "Нефть Urals"
+msgctxt "goods"
 msgid "Нефть Urals"
 msgstr "Ural-Öl"
 
+#: storage/models/storage.py:59
+#, fuzzy
+#| msgid "Бензин"
+msgctxt "goods"
+msgid "Бензин"
+msgstr "Kraftstoff"
+
 #: storage/models/storage.py:61
+#, fuzzy
+#| msgid "Дизельное топливо"
+msgctxt "goods"
 msgid "Дизельное топливо"
 msgstr "Dieseltreibtstoff"
 
-#: storage/models/storage.py:65 storage/models/transport.py:134
+#: storage/models/storage.py:63
+#, fuzzy
+#| msgid "Пластик"
+msgctxt "goods"
+msgid "Пластик"
+msgstr "Plastik"
+
+#: storage/models/storage.py:65
+#, fuzzy
+#| msgid "Сталь"
+msgctxt "goods"
 msgid "Сталь"
 msgstr "Stahl"
 
-#: storage/models/storage.py:67 storage/models/transport.py:138
+#: storage/models/storage.py:67
+#, fuzzy
+#| msgid "Алюминий"
+msgctxt "goods"
 msgid "Алюминий"
 msgstr "Aluminium"
 
-#: storage/models/storage.py:77 storage/models/transport.py:155
-#: war/models/squads/heavy_vehicle.py:32 war/models/wars/war_side.py:36
+#: storage/models/storage.py:71
+#, fuzzy
+#| msgid "Койки"
+msgctxt "goods"
+msgid "Койки"
+msgstr "Barracken"
+
+#: storage/models/storage.py:75
+#, fuzzy
+#| msgid "Автоматы"
+msgctxt "goods"
+msgid "Автоматы"
+msgstr "Automaten"
+
+#: storage/models/storage.py:77
+#, fuzzy
+#| msgid "Танки"
+msgctxt "goods"
 msgid "Танки"
 msgstr "Panzer"
 
-#: storage/models/storage.py:78 war/models/squads/light_vehicle.py:49
-#: war/models/wars/war_side.py:34
+#: storage/models/storage.py:78
+#, fuzzy
+#| msgid "ПТ-орудия"
+msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "PT-Kanonen"
 
 #: storage/models/storage.py:79
+#, fuzzy
+#| msgid "Орбитальные орудия"
+msgctxt "goods"
 msgid "Орбитальные орудия"
 msgstr "Orbitalkanonen"
 
-#: storage/models/storage.py:81 storage/models/transport.py:160
+#: storage/models/storage.py:81
+#, fuzzy
+#| msgid "Штурмовики"
+msgctxt "goods"
 msgid "Штурмовики"
 msgstr "Infanterie"
 
-#: storage/models/storage.py:82 storage/models/transport.py:170
+#: storage/models/storage.py:82
+#, fuzzy
+#| msgid "ПЗРК"
+msgctxt "goods"
 msgid "ПЗРК"
 msgstr "MANPADS"
+
+#: storage/models/storage.py:84
+#, fuzzy
+#| msgid "БМП"
+msgctxt "goods"
+msgid "БМП"
+msgstr "BMP"
+
+#: storage/models/storage.py:86
+#, fuzzy
+#| msgid "БПЛА"
+msgctxt "goods"
+msgid "БПЛА"
+msgstr "UAV"
 
 #: storage/models/storage.py:107
 msgid "coal_cap"
@@ -1137,21 +1240,41 @@ msgstr ""
 msgid "Уголь - кубов"
 msgstr ""
 
+#: storage/models/transport.py:93
+msgid "Железо"
+msgstr "Eisen"
+
 #: storage/models/transport.py:95
 msgid "Железо - кубов"
 msgstr ""
+
+#: storage/models/transport.py:98
+msgid "Бокситы"
+msgstr "Bauxit"
 
 #: storage/models/transport.py:100
 msgid "Бокситы - кубов"
 msgstr ""
 
+#: storage/models/transport.py:104
+msgid "Нефть WTI"
+msgstr "WTI-Öl"
+
 #: storage/models/transport.py:106
 msgid "WTI - кубов"
 msgstr ""
 
+#: storage/models/transport.py:109
+msgid "Нефть Brent"
+msgstr "Brent-Öl"
+
 #: storage/models/transport.py:111
 msgid "Brent - кубов"
 msgstr ""
+
+#: storage/models/transport.py:114
+msgid "Нефть Urals"
+msgstr "Ural-Öl"
 
 #: storage/models/transport.py:116
 msgid "Urals - кубов"
@@ -1169,9 +1292,17 @@ msgstr ""
 msgid "Пластик - кубов"
 msgstr ""
 
+#: storage/models/transport.py:134
+msgid "Сталь"
+msgstr "Stahl"
+
 #: storage/models/transport.py:136
 msgid "Сталь - кубов"
 msgstr ""
+
+#: storage/models/transport.py:138
+msgid "Алюминий"
+msgstr "Aluminium"
 
 #: storage/models/transport.py:140
 msgid "Алюминий - кубов"
@@ -1185,9 +1316,18 @@ msgstr ""
 msgid "Автоматы - кубов"
 msgstr ""
 
+#: storage/models/transport.py:155 war/models/squads/heavy_vehicle.py:32
+#: war/models/wars/war_side.py:36
+msgid "Танки"
+msgstr "Panzer"
+
 #: storage/models/transport.py:157
 msgid "Танки - кубов"
 msgstr ""
+
+#: storage/models/transport.py:160
+msgid "Штурмовики"
+msgstr "Infanterie"
 
 #: storage/models/transport.py:162
 msgid "Штурмовики - кубов"
@@ -1200,6 +1340,10 @@ msgstr ""
 #: storage/models/transport.py:167
 msgid "Орбиталки - кубов"
 msgstr ""
+
+#: storage/models/transport.py:170
+msgid "ПЗРК"
+msgstr "MANPADS"
 
 #: storage/models/transport.py:172
 msgid "ПЗРК - кубов"
@@ -1221,6 +1365,233 @@ msgstr ""
 msgid "Дроны - кубов"
 msgstr ""
 
+#: storage/templates/storage/redesign/storage.html:11
+#, fuzzy
+#| msgid "Склад"
+msgctxt "storage"
+msgid "Склад"
+msgstr "Lagerhaus"
+
+#: storage/templates/storage/redesign/storage.html:78
+#, fuzzy
+#| msgctxt "menu"
+#| msgid "склад"
+msgctxt "storage"
+msgid "склад"
+msgstr "Lagerhaus"
+
+#: storage/templates/storage/redesign/storage.html:92
+#, fuzzy
+#| msgid "сохранить"
+msgctxt "storage"
+msgid "хранилище"
+msgstr "speichern"
+
+#: storage/templates/storage/redesign/storage.html:107
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "характеристики"
+msgctxt "storage_assets"
+msgid "энергетики"
+msgstr "Fähigkeiten"
+
+#: storage/templates/storage/redesign/storage.html:114
+#: storage/templates/storage/redesign/storage.html:134
+#, fuzzy
+#| msgid "Передать"
+msgctxt "storage_assets"
+msgid "создать"
+msgstr "Übertragen"
+
+#: storage/templates/storage/redesign/storage.html:118
+#, fuzzy
+#| msgid "Выносливость"
+msgctxt "storage_assets"
+msgid "стоимость"
+msgstr "Ausdauer"
+
+#: storage/templates/storage/redesign/storage.html:146
+#, fuzzy
+#| msgctxt "menu"
+#| msgid "правительство"
+msgctxt "storage_assets"
+msgid "Количество"
+msgstr "Regierung"
+
+#: storage/templates/storage/redesign/storage.html:159
+msgctxt "storage_assets"
+msgid "использовать"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:178
+#: storage/templates/storage/redesign/storage.html:468
+#, fuzzy
+#| msgid "В этом регионе нет Склада"
+msgctxt "storage_transfer"
+msgid "Перемещение Склада"
+msgstr "Es gibt kein Lagerhaus in dieser Region"
+
+#: storage/templates/storage/redesign/storage.html:179
+msgctxt "storage_transfer"
+msgid "Вы можете перенести Склад в регион текущего местоположения (один раз)"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:192
+msgctxt "storage_transfer"
+msgid "перенести"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:454
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "storage_assets"
+msgid "Продление"
+msgstr "weiter"
+
+#: storage/templates/storage/redesign/storage.html:454
+#, fuzzy
+#| msgid "Активы"
+msgctxt "storage_assets"
+msgid "Активация"
+msgstr "Lagerbestand"
+
+#: storage/templates/storage/redesign/storage.html:454
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "премиум-аккаунт"
+msgctxt "storage_assets"
+msgid "премиум-аккаунта"
+msgstr "Premium Status"
+
+#: storage/templates/storage/redesign/storage.html:457
+msgctxt "storage_assets"
+msgid ""
+"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
+"отменить. Продолжить?"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:459
+msgctxt "storage_assets"
+msgid ""
+"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
+"невозможно отменить. Продолжить?"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:462
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "storage_assets"
+msgid "Продолжить"
+msgstr "weiter"
+
+#: storage/templates/storage/redesign/storage.html:463
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "storage_assets"
+msgid "Отмена"
+msgstr "abbrechen"
+
+#: storage/templates/storage/redesign/storage.html:469
+msgctxt "storage_transfer"
+msgid "Склад будет перемещен в регион вашего местонахождения"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:469
+msgctxt "storage_transfer"
+msgid "Больше этот Склад переместить не получится. Продолжить?"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage.html:470
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "storage_transfer"
+msgid "Продолжить"
+msgstr "weiter"
+
+#: storage/templates/storage/redesign/storage.html:471
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "storage_transfer"
+msgid "Отмена"
+msgstr "abbrechen"
+
+#: storage/templates/storage/redesign/storage_blocks/has_storage.html:26
+msgctxt "has_storage"
+msgid "счёт"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage_blocks/has_storage.html:33
+#, fuzzy
+#| msgid "Наличные"
+msgctxt "has_storage"
+msgid "наличные"
+msgstr "Geld"
+
+#: storage/templates/storage/redesign/storage_blocks/has_storage.html:38
+msgctxt "has_storage"
+msgid "всего денег"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:7
+#, fuzzy
+#| msgid "Население региона"
+msgctxt "no_storage"
+msgid "склад в регионе"
+msgstr "Einwohner in der Region"
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:9
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "no_storage"
+msgid "Стоимость создания"
+msgstr "Position in der Partei"
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:10
+msgctxt "no_storage"
+msgid "стали"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:10
+#, fuzzy
+#| msgid "Алюминий"
+msgctxt "no_storage"
+msgid "алюминия"
+msgstr "Aluminium"
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:11
+msgctxt "no_storage"
+msgid "доставка оплачивается отдельно"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:16
+msgctxt "no_storage"
+msgid "выберите склад списания материалов"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:22
+msgctxt "no_storage"
+msgid "нехватка материалов!"
+msgstr ""
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:22
+#, fuzzy
+#| msgctxt "skills"
+#| msgid "недоступно"
+msgctxt "no_storage"
+msgid "доставка"
+msgstr "nicht verfügbar"
+
+#: storage/templates/storage/redesign/storage_blocks/no_storage.html:44
+#, fuzzy
+#| msgid "Передать"
+msgctxt "no_storage"
+msgid "создать"
+msgstr "Übertragen"
+
+#: storage/templates/storage/storage_lines/cash_transfer.html:9
+msgid "Наличные"
+msgstr "Geld"
+
 #: storage/templates/storage/storage_lines/cash_transfer.html:14
 msgid "Денег всего"
 msgstr "Ausschließlich Geld"
@@ -1233,7 +1604,7 @@ msgstr "Im Lagerhaus"
 msgid "Передать"
 msgstr "Übertragen"
 
-#: storage/views/assets/assets.py:46
+#: storage/views/assets/assets.py:42
 msgid "Активы"
 msgstr "Lagerbestand"
 
@@ -1273,9 +1644,13 @@ msgstr "Minusbeträge können nicht eingegeben werden"
 msgid "incorrect_method"
 msgstr "fehlerhafte_Methode"
 
-#: storage/views/storage/storage.py:27
+#: storage/views/storage/storage.py:32
 msgid "Склад"
 msgstr "Lagerhaus"
+
+#: war/models/squads/light_vehicle.py:49 war/models/wars/war_side.py:34
+msgid "ПТ-орудия"
+msgstr "PT-Kanonen"
 
 #, fuzzy
 #~| msgctxt "overview"
